Remove fake id
